--- a/configuration/config.ini
+++ b/configuration/config.ini
@@ -1,8 +1,8 @@
 [Site]
 url=https://descargasdd.org
 login=/login.php?do=login
-username=arquillos
-password=1Flipper
+username=<user>
+password=<password>
 
 [Logging]
 file_path=e:\\SERIES
